<resources>
    <string name="app_name">ПДД РФ - правила дорожного движения России</string>
    <string name="add">Add trafficRules</string>
    <string name="delete">Delete</string>
    <string name="category_image_description">Category Image</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_settings">Настройки</string>
    <string name="text">Текст</string>
    <string name="title_cancel">Закрыть</string>

    <string name="text_font">Шрифт текста</string>
    <string name="text_font_description">Выберите удобный для чтения шрифт</string>

    <string name="text_size">Размер текста</string>
    <string name="text_size_description">Выберите удобный для чтения размер шрифта</string>
    
    <string name="about">О приложении</string>
    <string name="about_title">Версия ПДД</string>
    <string name="about_title_summary">Редакция №61 от 21.12.2019</string>
    <string name="about_version">Версия приложения</string>
    <string name="about_version_summary">1.0.3</string>
    
    <string name="feedback">Обратная связь</string>
    <string name="feedback_rate">Оставить отзыв</string>
    <string name="feedback_rate_summary">Оцените приложение в Google Play</string>
    <string name="feedback_rate_url">https://play.google.com/store/apps/details?id=app.pavel.pdd</string>

    <string name="app_id">ca-app-pub-7512755405624159~2397475545</string>
    <string name="ad_id">ca-app-pub-7512755405624159/1476982409</string>
    <string name="ad_id_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>
